--- a/src/index.css
+++ b/src/index.css
@@ -4,23 +4,11 @@ body {
   font-family: sans-serif;
 }
 
-.app {
-  background-color: aqua;
-}
-
-.header {
-  background-color: brown;
-  height: 100%;
-}
-
-.order {
-  background-color: darkgray;
-  height: 100%;
-}
-
-.inventory {
-  background-color: greenyellow;
-  height: 100%;
+.bookView {
+  border: 2px solid black;
+  border-radius: 5px;
+    margin: 5px;
+    padding: 5px;
 }
 
 .adminPanel {
@@ -31,4 +19,13 @@ body {
 
 .bookStock {
   margin-left: 20px;
+}
+
+.orderView {
+    border-bottom: 2px solid black;
+    margin: 5px;
+    padding: 5px;
+}
+.goToAdmin {
+    float: right;
 }
